Fix whitespace
Fix spacing between spaces and organisation section.

--- a/src/spaces/_spaces.scss
+++ b/src/spaces/_spaces.scss
@@ -2,6 +2,8 @@
   a {
     display: block;
   }
+
+  margin-bottom: $govuk-spacing-scale-8;
 }
 
 .space {
